# k8s-llm-incident-analyser

./: .env.example  .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/api/: analyse.py  reports.py  scenarios.py
app/core/: collector.py  preprocessor.py  prompts.py  redactor.py
app/core/llm/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  mock_provider.py  openai_provider.py
app/models/: __init__.py  evidence.py  incident.py
demo-app/app/: main.py
k8s/base/: configmap.yaml  deployment.yaml  service.yaml
k8s/scenarios/01-missing-env/: fault.yaml
k8s/scenarios/02-db-unavailable/: fault.yaml
k8s/scenarios/03-crashloop/: fault.yaml
k8s/scenarios/04-imagepull/: fault.yaml
k8s/scenarios/05-oom/: fault.yaml
k8s/scenarios/06-readiness/: fault.yaml
k8s/scenarios/07-liveness/: fault.yaml
k8s/scenarios/08-bad-configmap/: fault.yaml
k8s/scenarios/09-app-exception/: fault.yaml
k8s/scenarios/10-wrong-port/: fault.yaml
tests/unit/: test_api.py  test_collector.py  test_demo_app.py  test_k8s_manifests.py  test_llm_providers.py  test_models.py  test_preprocessor.py  test_prompts.py  test_redactor.py
